# rustdoc-scrape-examples-reexport-problem

./: Cargo.toml
examples/: aaaa.rs
src/: lib.rs
sub/examples/: ex.rs
sub/src/: lib.rs
sup/: Cargo.toml
sup/examples/: sup_ex.rs
sup/src/: lib.rs
