[package]
name = "sup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sub = { path = "../sub" }
scrape-me = "=0.1.1"
gitdep = { git = "https://github.com/WaffleLapkin/rustdoc-scrape-examples-reexport-problem.git", rev = "78de104" }
